bn table works with reentrant lock!